--- a/library.css
+++ b/library.css
@@ -11,7 +11,7 @@
     --largest-font-size: 2rem;
     --normal-font-size: 1.4rem;
 
-    --grid-min-size: 10rem;
+    --grid-min-size: 20rem;
 }
 
 * {
@@ -76,6 +76,23 @@ div.section {
 div.hole {
     background-color: var(--shelf-item-theme-bgcolor);
     z-index: 0;
+    display: grid;
+    place-items: center;
+}
+
+button.add {
+    background-color: inherit;
+    width: 5rem;
+    height: 5rem;
+    background: url('book-plus.png') no-repeat center;
+    border: 3px dashed var( --default-theme-bgcolor);
+    border-radius: 50%;
+}
+
+button.add:hover {
+    background: url('book-plus-outline.png') no-repeat center;
+    background-color: var(--default-theme-bgcolor);
+    border: 3px dashed var(--default-theme-color);
 }
 
 div.header,
