--- a/library.css
+++ b/library.css
@@ -1,17 +1,20 @@
 :root {
     font-size: 62.5%;
-    --general-theme-bgcolor: #f87171;
+    --general-theme-bgcolor: #3b82f6;
     --general-theme-color: #000;
     --general-theme-font: sans-serif;
     --shelf-theme-bgcolor: #b45309;
-    --shelf-item-theme-bgcolor: #1c1917;
+    --shelf-item-theme-bgcolor: #27272a;
     --default-theme-bgcolor: #FFF;
     --default-theme-color: #000;
-    --fade-theme-bgcolor: #bccbde; /* #e2e8f0 */
+    --fade-theme-bgcolor: #e5e7eb;
+    /* #e2e8f0 */
     --largest-font-size: 2rem;
-    --normal-font-size: 1.4rem;
+    --larger-font-size: 1.8rem;
+    --normal-font-size: 1.6rem;
+    --general-border-radius: 2rem;
 
-    --grid-min-size: 20rem;
+    --grid-min-size: 30rem;
 }
 
 * {
@@ -48,10 +51,10 @@ button.account {
     width: 10rem;
     height: 4rem;
     font-weight: bold;
-    border-radius: 2rem;
+    border-radius: var(--general-border-radius);
 }
 
-div.main > h2 {
+div.main>h2 {
     text-align: start;
 }
 
@@ -66,8 +69,9 @@ div.main {
 div.section {
     --shelf-padding-and-gap: 2.5rem;
 
+    padding: var(--shelf-padding-and-gap);
     background-color: var(--shelf-theme-bgcolor);
-    border-radius: 1rem;
+    border-radius: var(--general-border-radius);
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
     grid-template-rows: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
@@ -77,9 +81,10 @@ div.section {
 
 div.hole {
     background-color: var(--shelf-item-theme-bgcolor);
-    z-index: 0;
     display: grid;
     place-items: center;
+    border-radius: var(--general-border-radius);
+    z-index: 0;
 }
 
 button.add {
@@ -87,7 +92,7 @@ button.add {
     width: 5rem;
     height: 5rem;
     background: url('book-plus.png') no-repeat center;
-    border: 3px dashed var( --default-theme-bgcolor);
+    border: 3px dashed var(--default-theme-bgcolor);
     border-radius: 50%;
 }
 
@@ -101,10 +106,108 @@ div.overlay {
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
-    cursor: pointer;
+    display: grid;
+    place-items: center;
 }
+
+div.prompt {
+    background-color: var(--default-theme-bgcolor);
+    color: var(--default-theme-color);
+    width: var(--grid-min-size);
+    height: auto;
+    border: .5rem double var(--shelf-theme-bgcolor);
+    border-radius: var(--general-border-radius);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+div.prompt form {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-auto-rows: 1fr;
+    gap: 1rem;
+}
+
+div.prompt h2 {
+    font-weight: bold;
+}
+
+input {
+    background-color: var(--fade-theme-bgcolor);
+    height: 4rem;
+    width: 100%;
+    border: none;
+    border-radius: var(--general-border-radius);
+    text-align: left;
+    padding: 1.5rem;
+    cursor: text;
+}
+
+form button {
+    background-color: var(--shelf-theme-bgcolor);
+    border-radius: var(--general-border-radius);
+    border: none;
+    font-size: var(--largest-font-size);
+    font-weight: bold;
+}
+
+div.reading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+form label {
+    text-align: start;
+    font-size: var(--larger-font-size);
+}
+
+input[type='checkbox'] {
+    height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+form input + label {
+    cursor: pointer;
+	text-indent: -9999px;
+	width: 10rem;
+	height: 4rem;
+    background: grey;
+	display: block;
+	border-radius: 100px;
+	position: relative;
+}
+
+form input + label:after {
+	content: '';
+	position: absolute;
+	left: .5rem;
+    top: .2rem;
+	width: 4rem;
+	height: 3.5rem;
+	background: var(--default-theme-bgcolor);
+	border-radius: 50%;
+	transition: 0.3s;
+}
+
+input[type='checkbox']:checked + label {
+	background: var(--general-theme-bgcolor);
+}
+
+input[type='checkbox']:checked + label:after {
+	left: calc(100% - .5rem);
+	transform: translateX(-100%);
+}
+
+label:active:after {
+	width: 3rem;
+}
+
+
 
 div.header,
 div.footer {
