--- a/library.css
+++ b/library.css
@@ -8,7 +8,8 @@
     --default-theme-bgcolor: #FFF;
     --default-theme-color: #000;
     --fade-theme-bgcolor: #e5e7eb;
-    /* #e2e8f0 */
+    --valid-theme-bgcolor: #22c55e;
+    --invalid-theme-bgcolor: #dc2626;
     --largest-font-size: 2rem;
     --larger-font-size: 1.8rem;
     --normal-font-size: 1.6rem;
@@ -126,9 +127,9 @@ div.prompt {
 
 div.prompt form {
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-auto-rows: 1fr;
-    gap: 1rem;
+    grid-template-rows: auto;
+    grid-auto-rows: auto;
+    gap: 2rem;
 }
 
 div.prompt h2 {
@@ -137,7 +138,8 @@ div.prompt h2 {
 
 input {
     background-color: var(--fade-theme-bgcolor);
-    height: 4rem;
+    outline-color: var(--general-theme-bgcolor);
+    height: 5rem;
     width: 100%;
     border: none;
     border-radius: var(--general-border-radius);
@@ -147,14 +149,22 @@ input {
 }
 
 form button {
-    background-color: var(--shelf-theme-bgcolor);
+    background-color: var(--general-theme-bgcolor);
     border-radius: var(--general-border-radius);
+    height: 5rem;
     border: none;
     font-size: var(--largest-font-size);
     font-weight: bold;
 }
 
+form button:active,
+form button:hover,
+form button:focus {
+    background-color: var(--valid-theme-bgcolor);
+}
+
 div.reading {
+    height: 10rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -165,46 +175,91 @@ form label {
     font-size: var(--larger-font-size);
 }
 
-input[type='checkbox'] {
-    height: 0;
-	width: 0;
-	visibility: hidden;
+/* credit goes to: Vineeth.TR */
+
+.checkbox {
+    position: relative;
+    display: inline-block;
 }
 
-form input + label {
+.checkbox label {
+    width: 9rem;
+    height: 4rem;
+    background: #ccc;
+    position: relative;
+    display: inline-block;
+    border-radius: 5rem;
+    transition: .4s;
+}
+
+.checkbox label::after {
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    left: 0;
+    top: -5px;
+    z-index: 2;
+    background: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .2);
+    transition: .4s;
+}
+
+input[type=checkbox] {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    opacity: 0;
     cursor: pointer;
-	text-indent: -9999px;
-	width: 10rem;
-	height: 4rem;
-    background: grey;
-	display: block;
-	border-radius: 100px;
-	position: relative;
 }
 
-form input + label:after {
-	content: '';
-	position: absolute;
-	left: .5rem;
-    top: .2rem;
-	width: 4rem;
-	height: 3.5rem;
-	background: var(--default-theme-bgcolor);
-	border-radius: 50%;
-	transition: 0.3s;
+input[type=checkbox]:hover+label:after {
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, .2), 0 3px 8px 0 rgba(0, 0, 0, .15)
 }
 
-input[type='checkbox']:checked + label {
-	background: var(--general-theme-bgcolor);
+input[type=checkbox]:checked+label:after {
+    left: 40px;
 }
 
-input[type='checkbox']:checked + label:after {
-	left: calc(100% - .5rem);
-	transform: translateX(-100%);
+.checkbox:after {
+    content: '✖';
+    color: #aaa;
+    position: relative;
+    left: 2.5rem;
+    bottom: 3.5rem;
 }
 
-label:active:after {
-	width: 3rem;
+.checkbox:before {
+    content: '✓';
+    position: relative;
+    right: 2rem;
+    top: 3rem;
+    color: #000;
+    z-index: 1;
+}
+
+.checkbox label {
+    width: 80px;
+    background: #EAEAEA;
+    box-shadow: 0 0 1px 2px rgba(0, 0, 0, .15);
+}
+
+.checkbox label:after {
+    top: 0;
+    width: 4rem;
+    height: 4rem;
+}
+
+input[type=checkbox]:checked+label {
+    background: var(--valid-theme-bgcolor);
+}
+
+input[type=checkbox]:checked+label:after {
+    left: 40px;
 }
 
 
@@ -224,4 +279,3 @@ div.header {
 div.footer {
     justify-content: center;
 }
-
