--- a/library.css
+++ b/library.css
@@ -1,21 +1,26 @@
 :root {
     font-size: 62.5%;
+    --default-theme-bgcolor: #FFF;
+    --default-theme-color: #000;
+
     --general-theme-bgcolor: #3b82f6;
     --general-theme-color: #000;
     --general-theme-font: sans-serif;
+    --fade-theme-bgcolor: #e5e7eb;
+
     --outer-theme-bgcolor: #b45309;
     --outer-item-theme-bgcolor: #27272a;
-    --inner-theme-bgcolor: #b91c1c;
-    --default-theme-bgcolor: #FFF;
-    --default-theme-color: #000;
-    --fade-theme-bgcolor: #e5e7eb;
+    --book-theme-bgcolor: #973431;
+    --book-title-theme-bgcolor: #cfa92a;
+
     --valid-theme-bgcolor: #22c55e;
     --invalid-theme-bgcolor: #dc2626;
+
     --largest-font-size: 2rem;
     --larger-font-size: 1.8rem;
     --normal-font-size: 1.6rem;
-    --general-border-radius: 2rem;
 
+    --general-border-radius: 2rem;
     --grid-min-size: 30rem;
 }
 
@@ -42,7 +47,12 @@
 }
 
 button {
+    height: 5rem;
     cursor: pointer;
+    font-size: var(--larger-font-size);
+    font-weight: bold;
+    border-radius: var(--general-border-radius);
+    border: none;
 }
 
 button:active {
@@ -51,12 +61,19 @@ button:active {
 
 button.account {
     width: 10rem;
-    height: 4rem;
-    font-weight: bold;
-    border-radius: var(--general-border-radius);
 }
 
-div.main>h2 {
+button.switch {
+    width: 100%;
+    background-color: var(--general-theme-bgcolor);
+}
+
+button.control {
+    width: 100%;
+    background-color: var(--general-theme-bgcolor);
+}
+
+div.main h2 {
     text-align: start;
 }
 
@@ -79,7 +96,6 @@ div.section {
     grid-template-rows: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
     grid-auto-rows: minmax(var(--grid-min-size), 1fr);
     gap: var(--outer-padding-and-gap);
-    /* position: absolute; */
 }
 
 div.section {
@@ -101,23 +117,54 @@ div.binder {
     color: var(--general-theme-color);
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 1fr auto;
     grid-auto-rows: auto;
     align-items: center;
-    /* justify-items: ; */
-    border-radius: var(--general-border-radius);
+    justify-items: center;
     position: relative;
+    padding: 2rem;
+    border-radius: var(--general-border-radius);
     z-index: 0;
 }
 
+div.binder div {
+    width: 100%;
+}
+
 div.binder.occupied {
-    background-color: var(--inner-theme-bgcolor);
+    background-color: var(--book-theme-bgcolor);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-flow: column wrap;
+    overflow: normal;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
+
+div.booktitle {
+    height: 10rem;
+    background-color: var(--book-title-theme-bgcolor);
+    border-radius: var(--general-border-radius);
+}
+
+div.bookread {
+    /* position: sticky; */
+    /* top: 0; */
+}
+
+div.bookcontrol {
+    /* position: sticky; */
+    /* top: 0; */
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: space-between;
 }
 
 button.add {
     background-color: inherit;
     width: 5rem;
-    height: 5rem;
     background: url('book-plus.png') no-repeat center;
     border: 3px dashed var(--default-theme-bgcolor);
     border-radius: 50%;
@@ -176,11 +223,7 @@ input {
 
 form button {
     background-color: var(--general-theme-bgcolor);
-    border-radius: var(--general-border-radius);
-    height: 5rem;
-    border: none;
-    font-size: var(--largest-font-size);
-    font-weight: bold;
+
 }
 
 form button:active,
@@ -226,7 +269,7 @@ form label {
     border-radius: 100%;
     left: 0;
     top: -5px;
-    z-index: 2;
+    z-index: 4;
     background: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, .2);
     transition: .4s;
@@ -257,6 +300,7 @@ input[type=checkbox]:checked+label:after {
     position: relative;
     left: 2rem;
     bottom: 3.5rem;
+    z-index: 3;
 }
 
 .checkbox:before {
