feat: fix display and redisplay of binders to just step accumulation

--- a/library.css
+++ b/library.css
@@ -47,6 +47,7 @@
 }
 
 button {
+    background-color: var(--general-theme-bgcolor);
     height: 5rem;
     cursor: pointer;
     font-size: var(--larger-font-size);
@@ -55,22 +56,25 @@ button {
     border: none;
 }
 
+button:hover,
+button:focus {
+    background-color: var(--valid-theme-bgcolor);
+}
 button:active {
     transform: scale(0.97);
 }
 
 button.account {
     width: 10rem;
+    border: 1px solid var(--general-theme-color);
 }
 
 button.switch {
     width: 100%;
-    background-color: var(--general-theme-bgcolor);
 }
 
 button.control {
     width: 100%;
-    background-color: var(--general-theme-bgcolor);
 }
 
 div.main h2 {
@@ -129,6 +133,7 @@ div.binder {
 
 div.binder div {
     width: 100%;
+    font-size: var(--larger-font-size);
 }
 
 div.binder.occupied {
@@ -143,19 +148,12 @@ div.binder.occupied {
 }
 
 div.booktitle {
-    height: 10rem;
+    height: auto;
     background-color: var(--book-title-theme-bgcolor);
     border-radius: var(--general-border-radius);
 }
 
-div.bookread {
-    /* position: sticky; */
-    /* top: 0; */
-}
-
 div.bookcontrol {
-    /* position: sticky; */
-    /* top: 0; */
     display: flex;
     gap: 1rem;
     align-items: center;
@@ -166,14 +164,14 @@ button.add {
     background-color: inherit;
     width: 5rem;
     background: url('book-plus.png') no-repeat center;
-    border: 3px dashed var(--default-theme-bgcolor);
+    border: 2px dashed var(--default-theme-bgcolor);
     border-radius: 50%;
 }
 
 button.add:hover {
     background: url('book-plus-outline.png') no-repeat center;
     background-color: var(--default-theme-bgcolor);
-    border: 3px dashed var(--default-theme-color);
+    border: 2px dashed var(--default-theme-color);
 }
 
 div.overlay {
@@ -187,15 +185,16 @@ div.overlay {
 }
 
 div.prompt {
-    background-color: var(--default-theme-bgcolor);
+    background-color: var(--book-theme-bgcolor);
     color: var(--default-theme-color);
-    width: var(--grid-min-size);
+    width: auto;
     height: auto;
-    border: .5rem double var(--outer-theme-bgcolor);
-    border-radius: var(--general-border-radius);
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    border: .5rem double var(--outer-theme-bgcolor);
+    border-radius: var(--general-border-radius);
+    padding: 2rem;
 }
 
 div.prompt form {
@@ -221,17 +220,6 @@ input {
     cursor: text;
 }
 
-form button {
-    background-color: var(--general-theme-bgcolor);
-
-}
-
-form button:active,
-form button:hover,
-form button:focus {
-    background-color: var(--valid-theme-bgcolor);
-}
-
 div.reading {
     height: 10rem;
     display: flex;
@@ -242,6 +230,7 @@ div.reading {
 form label {
     text-align: start;
     font-size: var(--larger-font-size);
+    cursor: pointer;
 }
 
 /* credit goes to: Vineeth.TR */
@@ -259,6 +248,7 @@ form label {
     display: inline-block;
     border-radius: 5rem;
     transition: .4s;
+    cursor: pointer;
 }
 
 .checkbox label::after {
@@ -298,16 +288,16 @@ input[type=checkbox]:checked+label:after {
     content: '✖';
     color: #aaa;
     position: relative;
-    left: 2rem;
-    bottom: 3.5rem;
+    right: 2.5rem;
+    bottom: 1.5rem;
     z-index: 3;
 }
 
 .checkbox:before {
     content: '✓';
     position: relative;
-    right: 2rem;
-    top: 3rem;
+    left: 2.5rem;
+    bottom: 1.5rem;
     color: #000;
     z-index: 3;
 }
@@ -338,6 +328,7 @@ div.footer {
     min-height: 10vh;
     display: flex;
     align-items: center;
+    font-weight: bolder;
 }
 
 div.header {
