--- a/library.css
+++ b/library.css
@@ -7,10 +7,11 @@
     --general-theme-font: monospace, serif, sans-serif;
     --fade-theme-bgcolor: #cbd5e1;
 
-    --outer-theme-bgcolor: #b45309;
-    --outer-item-theme-bgcolor: #27272a;
-    --book-theme-bgcolor: #e11d48;
+    --tempo-theme-bgcolor: #b45309;
+    --tempo-item-theme-bgcolor: #27272a;
+    --book-theme-bgcolor: #86198f;
     --book-title-theme-bgcolor: #cfa92a;
+    --book-label-color: #777;
 
     --valid-theme-bgcolor: #22c55e;
     --invalid-theme-bgcolor: #dc2626;
@@ -90,34 +91,34 @@ div.main {
 }
 
 div.section {
-    --outer-padding-and-gap: 2.5rem;
+    --tempo-padding-and-gap: 2.5rem;
 
-    padding: var(--outer-padding-and-gap);
-    background-color: var(--outer-theme-bgcolor);
+    padding: var(--tempo-padding-and-gap);
+    background-color: var(--tempo-theme-bgcolor);
     border-radius: var(--general-border-radius);
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
     grid-template-rows: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
     grid-auto-rows: minmax(var(--grid-min-size), 1fr);
-    gap: var(--outer-padding-and-gap);
+    gap: var(--tempo-padding-and-gap);
 }
 
 div.section {
-    --outer-padding-and-gap: 2.5rem;
+    --tempo-padding-and-gap: 2.5rem;
 
-    padding: var(--outer-padding-and-gap);
-    background-color: var(--outer-theme-bgcolor);
+    padding: var(--tempo-padding-and-gap);
+    background-color: var(--tempo-theme-bgcolor);
     border-radius: var(--general-border-radius);
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
     grid-template-rows: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
     grid-auto-rows: minmax(var(--grid-min-size), 1fr);
-    gap: var(--outer-padding-and-gap);
+    gap: var(--tempo-padding-and-gap);
 }
 
 
 div.binder {
-    background-color: var(--outer-item-theme-bgcolor);
+    background-color: var(--tempo-item-theme-bgcolor);
     color: var(--default-theme-color);
     display: grid;
     grid-template-columns: 1fr;
@@ -192,7 +193,7 @@ div.prompt {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    border: .5rem double var(--outer-theme-bgcolor);
+    border: .5rem double var(--tempo-theme-bgcolor);
     border-radius: var(--general-border-radius);
     padding: 2rem;
 }
@@ -211,13 +212,22 @@ div.prompt h2 {
 input {
     background-color: var(--fade-theme-bgcolor);
     outline-color: var(--general-theme-bgcolor);
-    height: 5rem;
+    height: 3rem;
     width: 100%;
+    font-family: var(--general-theme-font);
     border: none;
     border-radius: var(--general-border-radius);
     text-align: left;
     padding: 1.5rem;
     cursor: text;
+}
+
+input.error {
+    border: 2px solid var(--invalid-theme-bgcolor);
+}
+
+input.success {
+    border: 2px solid var(--valid-theme-bgcolor);
 }
 
 div.reading {
@@ -231,10 +241,16 @@ form label {
     text-align: start;
     font-size: var(--larger-font-size);
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+form span {
+    color: var(--invalid-theme-bgcolor);
 }
 
 /* credit goes to: Vineeth.TR */
-
 .checkbox {
     position: relative;
     display: inline-block;
@@ -276,17 +292,13 @@ input[type=checkbox] {
     cursor: pointer;
 }
 
-input[type=checkbox]:hover+label:after {
-    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, .2), 0 3px 8px 0 rgba(0, 0, 0, .15)
-}
-
 input[type=checkbox]:checked+label:after {
     left: 40px;
 }
 
 .checkbox:after {
     content: '✖';
-    color: #aaa;
+    color: #000;
     position: relative;
     right: 2.5rem;
     bottom: 1.5rem;
